# FaceDetector

./: ar_track.launch
src/friendly_faces/: CMakeLists.txt  package.xml
src/friendly_faces/include/: image_proc.h
src/friendly_faces/src/: image_proc.cpp  main.cpp  net.cpp
